Multitenant terminado (limpio)